# contablo

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: contablo_issue_template.yaml
.github/workflows/: release.yaml  test.yaml  update_changelog.yaml
contablo/: cli.py  csvimporter.py  fields.py  importable.py  importspec.py
tests/: defs_fields.py  defs_importspec.py  example-1_chunk.csv  example-3_chunks_a.csv  example-3_chunks_b.csv  example-3_chunks_c.csv  example-4.csv  fieldspec-banking.json  test_cli.py  test_csv_helper.py  test_csvimporter.py  test_custom_fields_with_transforms.py  test_fields.py  test_format_helpers.py  test_importable.py  test_importablemerge.py  test_importspec.py  test_match.py  test_numberformat.py
